--- a/index.html
+++ b/index.html
@@ -44,15 +44,19 @@
     </div>
 
     <div class="section-2">
-      <h1>Discover innovative ways to decorate</h1>
+      <p class="heading-text-lg">Discover innovative ways to decorate</p>
 
-      <p>
+      <p class="body-text">
         We provide unmatched quality, comfort, and style for property owners across the country. 
         Our experts combine form and function in bringing your vision to life. Create a room in your 
         own style with our collection and make your property a reflection of you and what you love.
       </p>
 
-      <button>shop now <img src="./images/icon-arrow.svg" alt="right pointing arrow"></button>
+      <!-- <button class="shop-now-btn"><p class="btn-text">shop now</p><img src="./images/icon-arrow.svg" alt="right pointing arrow"></button> -->
+      <div class="shop-now-group">
+        <p class="btn-text">shop now</p>
+        <button  class="shop-now-btn"><img src="./images/icon-arrow.svg" alt="right pointing arrow"></button>
+      </div>
     </div>
 
     <div class="section-3">
@@ -60,16 +64,14 @@
     </div>
 
     <div class="section-4">
-      <h4>About our furniture</h4>
+      <p class="heading-text-sm">About our furniture</p>
 
-      <p>
+      <p class="body-text">
         Our multifunctional collection blends design and function to suit your individual taste.
         Make each room unique, or pick a cohesive theme that best express your interests and what
         inspires you. Find the furniture pieces you need, from traditional to contemporary styles
         or anything in between. Product specialists are available to help you create your dream space.
       </p>
-
-      <button>shop now <img src="./images/icon-arrow.svg" alt="right pointing arrow"></button>
     </div>
 
     <div class="section-5">
