--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="mobile">
-    <div class="hero-img">
+    <div class="hero-img" id="hero">
       <nav>
         <div class="navigation" id="nav-menu">
           <a href="javascript:void(0)" id="icon-open" onclick="openCloseNav()"><img src="./images/icon-hamburger.svg"
@@ -38,8 +38,8 @@
         </div>
       </nav>
       <div class="button-group">
-        <button class="arrow-btn" id="arrow-left"><img src="./images/icon-angle-left.svg" alt=""></button>
-        <button class="arrow-btn" id="arrow-right"><img src="./images/icon-angle-right.svg" alt=""></button>
+        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt=""></button>
+        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt=""></button>
       </div>
     </div>
 
