--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </div>
 
     <div class="section-2">
-      <p class="heading-text-lg">Discover innovative ways to decorate</p>
+      <p class="heading-text-lg" id="heading-text-main">Discover innovative ways to decorate</p>
 
-      <p class="body-text">
+      <p class="body-text" id="body-text-main">
         We provide unmatched quality, comfort, and style for property owners across the country. 
         Our experts combine form and function in bringing your vision to life. Create a room in your 
         own style with our collection and make your property a reflection of you and what you love.
