move buttongroup into own div and work on desktop layout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <div class="mobile">
+  <div class="container">
     <div class="hero-img" id="hero">
       <nav>
         <div class="navigation" id="nav-menu">
@@ -37,10 +37,12 @@
           </div>
         </div>
       </nav>
-      <div class="button-group">
-        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt=""></button>
-        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt=""></button>
-      </div>
+
+    </div>
+
+    <div class="button-group">
+      <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt=""></button>
+      <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt=""></button>
     </div>
 
     <div class="section-2">
@@ -60,7 +62,7 @@
     </div>
 
     <div class="section-3">
-      <img src="./images/image-about-dark.jpg" alt="">
+      <!-- <img src="./images/image-about-dark.jpg" alt=""> -->
     </div>
 
     <div class="section-4">
@@ -75,7 +77,7 @@
     </div>
 
     <div class="section-5">
-      <img src="./images/image-about-light.jpg" alt="">
+      <!-- <img src="./images/image-about-light.jpg" alt=""> -->
     </div>
 
     <!-- <img src="./images/mobile-image-hero-1.jpg" alt="" class="mobile-img"> -->
