check viewport width to switch slideshow between mobile and desktop images

--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
         </div>
       </nav>
 
+      <div class="button-group">
+        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt=""></button>
+        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt=""></button>
+      </div>
     </div>
 
-    <div class="button-group">
+    <!-- <div class="button-group">
       <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt=""></button>
       <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt=""></button>
-    </div>
+    </div> -->
 
     <div class="section-2">
       <p class="heading-text-lg" id="heading-text-main">Discover innovative ways to decorate</p>
@@ -58,6 +62,11 @@
       <div class="shop-now-group">
         <p class="btn-text">shop now</p>
         <button  class="shop-now-btn"><img src="./images/icon-arrow.svg" alt="right pointing arrow"></button>
+      </div>
+
+      <div class="button-group-section-2">
+        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt=""></button>
+        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt=""></button>
       </div>
     </div>
 
