--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./index.css">
   <script src="./index.js"></script>
@@ -13,9 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-
-
+    rel="stylesheet"
+  >
   <title>Frontend Mentor | Room homepage</title>
 </head>
 
@@ -84,12 +81,12 @@
     </div>
   </div>
 
-  <!-- <footer>
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Cassidy McMichael</a>.
+      Coded by <a href="https://cmcmichael.vercel.app/"  target="_blank">Cassidy McMichael</a>.
     </div>
-  </footer> -->
+  </footer>
 
 </body>
 
