add alt text to images

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <nav>
         <div class="navigation" id="nav-menu">
           <a href="javascript:void(0)" id="icon-open" onclick="openCloseNav()"><img src="./images/icon-hamburger.svg"
-              alt=""></a>
+              alt="three white lines stacked on top of eachother"></a>
           <a href="javascript:void(0)" id="icon-close" onclick="openCloseNav()"><img src="./images/icon-close.svg"
-              alt=""></a>
+              alt="two white barscrossed against eachother"></a>
           <a href="" id="logo"><img src="./images/logo.svg" alt=""></a>
           <div id="links">
             <a href="#home">home</a>
@@ -36,8 +36,8 @@
       </nav>
 
       <div class="button-group">
-        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt=""></button>
-        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt=""></button>
+        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt="thin white angle pointing left"></button>
+        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt="thin white angle pointing right"></button>
       </div>
     </div>
 
@@ -56,8 +56,8 @@
       </div>
 
       <div class="button-group-section-2">
-        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt=""></button>
-        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt=""></button>
+        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt="thin white angle pointing left"></button>
+        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt="thin white angle pointing right"></button>
       </div>
     </div>
 
