update grid-template-areas, grid-auto-rows, and grid-template-columns

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet"
-  >
+    rel="stylesheet">
   <title>Frontend Mentor | Room homepage</title>
 </head>
 
@@ -36,8 +35,10 @@
       </nav>
 
       <div class="button-group">
-        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt="thin white angle pointing left"></button>
-        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt="thin white angle pointing right"></button>
+        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg"
+            alt="thin white angle pointing left"></button>
+        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg"
+            alt="thin white angle pointing right"></button>
       </div>
     </div>
 
@@ -45,24 +46,25 @@
       <p class="heading-text-lg" id="heading-text-main">Discover innovative ways to decorate</p>
 
       <p class="body-text" id="body-text-main">
-        We provide unmatched quality, comfort, and style for property owners across the country. 
-        Our experts combine form and function in bringing your vision to life. Create a room in your 
+        We provide unmatched quality, comfort, and style for property owners across the country.
+        Our experts combine form and function in bringing your vision to life. Create a room in your
         own style with our collection and make your property a reflection of you and what you love.
       </p>
 
       <div class="shop-now-group">
         <p class="btn-text">shop now</p>
-        <button  class="shop-now-btn"><img src="./images/icon-arrow.svg" alt="right pointing arrow"></button>
+        <button class="shop-now-btn"><img src="./images/icon-arrow.svg" alt="right pointing arrow"></button>
       </div>
 
       <div class="button-group-section-2">
-        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg" alt="thin white angle pointing left"></button>
-        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg" alt="thin white angle pointing right"></button>
+        <button class="arrow-btn" id="arrow-left" onclick="setSlides(-1)"><img src="./images/icon-angle-left.svg"
+            alt="thin white angle pointing left"></button>
+        <button class="arrow-btn" id="arrow-right" onclick="setSlides(1)"><img src="./images/icon-angle-right.svg"
+            alt="thin white angle pointing right"></button>
       </div>
     </div>
 
     <div class="section-3">
-      <!-- <img src="./images/image-about-dark.jpg" alt=""> -->
     </div>
 
     <div class="section-4">
@@ -77,16 +79,15 @@
     </div>
 
     <div class="section-5">
-      <!-- <img src="./images/image-about-light.jpg" alt=""> -->
     </div>
   </div>
 
-  <footer>
+  <!-- <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://cmcmichael.vercel.app/"  target="_blank">Cassidy McMichael</a>.
     </div>
-  </footer>
+  </footer> -->
 
 </body>
 
